<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/radio_group_bg"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    tools:context="zhuhao.news.NewsActivity">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_news_title"
        android:background="@drawable/title_bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>

        <ImageView
            android:id="@+id/iv_type"
            android:layout_width="@dimen/activity_width"
            android:layout_height="@dimen/activity_width"
            android:layout_alignParentRight="true"
            android:background="@color/radio_group_bg"
            android:clickable="true"
            android:visibility="visible"
            android:padding="@dimen/one_iv_padding"
            android:src="@drawable/arrows_selector"/>


    </RelativeLayout>


    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:paddingTop="2dp">

        <RadioButton
            android:id="@+id/radioButton1"
            style="@style/radiobtnSytle"
            android:checked="true"
            android:drawableTop="@drawable/home_selector"
            android:text="@string/main_tab1"
            android:textSize="@dimen/radio_textsize"/>

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/radiobtnSytle"
            android:drawableTop="@drawable/smartservice_selector"
            android:text="@string/main_tab2"
            android:textSize="@dimen/radio_textsize"/>

        <RadioButton
            android:id="@+id/radioButton3"

            style="@style/radiobtnSytle"
            android:drawableTop="@drawable/setting_selector"
            android:text="@string/main_tab3"
            android:textSize="@dimen/radio_textsize"/>

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/radiobtnSytle"
            android:drawableTop="@drawable/gov_selector"
            android:text="@string/main_tab4"
            android:textSize="@dimen/radio_textsize"/>


    </RadioGroup>
</LinearLayout>
