<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_us_selector"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/iv_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_news_title"
            android:padding="@dimen/one_iv_padding"
            android:src="@drawable/head_photo"/>

        <TextView
            android:id="@+id/mine_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_mine"
            android:layout_centerHorizontal="true"
            android:text="立即登录"
            android:textColor="@color/default_circle_indicator_fill_color"

            />

        <TextView
            android:id="@+id/mine_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mine_title_login"
            android:layout_centerHorizontal="true"
            android:text="赢积分 抢大礼！"
            android:textColor="#FDEF86"


            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_news_title"
        android:background="@drawable/about_us_selector"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_read"
            style="@style/loginStyle"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/read"
            android:text="@string/login_iv1"
            android:textSize="@dimen/radio_textsize"/>

        <TextView
            android:id="@+id/tv_follow"
            style="@style/loginStyle"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/save"
            android:text="@string/login_iv2"
            android:textSize="@dimen/radio_textsize"/>

        <TextView
            android:id="@+id/tv_money"
            style="@style/loginStyle"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/follow"
            android:text="@string/login_iv3"
            android:textSize="@dimen/radio_textsize"/>

        <TextView
            android:id="@+id/tv_save"
            style="@style/loginStyle"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/money"
            android:text="@string/login_iv4"
            android:textSize="@dimen/radio_textsize"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title"
        android:background="@drawable/about_us_selector"
        android:drawableLeft="@drawable/massage"
        android:drawablePadding="@dimen/radio_textsize"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_file"
        android:text="我的消息"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title"
        android:background="@drawable/about_us_selector"
        android:drawableLeft="@drawable/supermaker"
        android:drawablePadding="@dimen/radio_textsize"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_file"
        android:text="金币商城"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title"
        android:background="@drawable/about_us_selector"
        android:drawableLeft="@drawable/mission"
        android:drawablePadding="@dimen/radio_textsize"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_file"
        android:text="金币任务"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title"
        android:background="@drawable/about_us_selector"
        android:drawableLeft="@drawable/mybag"
        android:drawablePadding="@dimen/radio_textsize"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_file"
        android:text="我的消息"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title"
        android:background="@drawable/about_us_selector"
        android:drawableLeft="@drawable/setting"
        android:drawablePadding="@dimen/radio_textsize"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_file"
        android:text="我的管理"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title"
        android:background="@drawable/about_us_selector"
        android:drawableLeft="@drawable/money"
        android:drawablePadding="@dimen/radio_textsize"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_file"
        android:text="我的宝贝"/>

</LinearLayout>